# INF1761---Computacao-Grafica

./: .gitignore
C++/: Makefile  error.cpp  image.cpp  main_2d.cpp  shader.cpp  solar  texcube.cpp
P1/: CMakeLists.txt
P1/include/: Ball.h  Light.h  Node.h  PoolEngine.h  PoolSimulator.h  Quad.h  Rectangle.h  Transform.h
P1/shaders/: fragment.glsl  vertex.glsl
P1/src/: Ball.cpp  Color.cpp  (+9 more)
P2/: CMakeLists.txt
P3/: CMakeLists.txt
T1/: .shape.h.swp  Makefile  main.cpp  polygon.cpp  polygon.h  shader.cpp  triangle.cpp
T2/: Circle.cpp  Circle.h  Clock.cpp  Clock.h  Hand.cpp  Hand.h  Makefile  error.cpp  main.cpp
T3/: CMakeLists.txt
T5/: CMakeLists.txt
T5/include/: AstralBody.h  Base.h  MoonGlobe.h  Orbit.h  ParticleEmitter.h  Table.h
T5/shaders/: fragment.glsl  vertex.glsl
T5/src/: AstralBody.cpp  Base.cpp  MoonGlobe.cpp  Orbit.cpp  ParticleEmitter.cpp  Table.cpp  main.cpp
commons/: CMakeLists.txt
commons/include/: Arcball.h  Camera.h  Camera2D.h  Camera3D.h  Color.h  Cube.h  Cylinder.h  Disk.h  Emissive.h  Engine.h  Framebuffer.h  Grid.h  Image.h  Node.h  Obj.h  ParticleEmitter.h  Quad.h  Ring.h  Scene.h  Shader.h  Shape.h  SkyBox.h  Sphere.h  State.h  TexDepth.h  Texbuffer.h  Texcube.h  Texture.h  Transform.h  Variable.h
commons/src/: Arcball.cpp  Camera2D.cpp  Camera3D.cpp  Color.cpp  Cube.cpp  Cylinder.cpp  Disk.cpp  Emissive.cpp  Error.cpp  Framebuffer.cpp  Grid.cpp  Light.cpp  Node.cpp  Obj.cpp  ParticleEmitter.cpp  Quad.cpp  Ring.cpp  Shader.cpp  SkyBox.cpp  Sphere.cpp  TexDepth.cpp  Texbuffer.cpp  Texcube.cpp  Texture.cpp  Transform.cpp
(+60 files in other folders)
